# lightspot

./: .gitignore  CMakeLists.txt  FindHIDAPI.cmake  lightspot.c
src/: lightspotd.c
udev/: 52-spotlight.rules
