cmake_minimum_required(VERSION 3.9)
project(lightspot C)

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR})

find_package(HIDAPI REQUIRED)

add_executable(${CMAKE_PROJECT_NAME} lightspot.c)
set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES INCLUDE_DIRECTORIES ${HIDAPI_INCLUDE_DIR})
set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES LINK_LIBRARIES ${HIDAPI_LIBRARIES})

install(TARGETS ${CMAKE_PROJECT_NAME}
    RUNTIME DESTINATION bin
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib)
